@@ -2,8 +2,8 @@
 ]>
 <book>
 	<bookinfo>
-		<date>$Date: 2003-06-30 04:59:59 $</date>
-		<releaseinfo>$Revision: 1.59 $</releaseinfo>
+		<date>$Date: 2003-07-27 11:27:02 $</date>
+		<releaseinfo>$Revision: 1.60 $</releaseinfo>
 		<title><productname>FreeTDS</productname> User Guide</title>
 		<subtitle>A Guide to Installing, Configuring and Running <productname>FreeTDS</productname></subtitle>
 		<author>
@@ -37,7 +37,7 @@
 				<!-- ////////////////// CHAPTER /////////////////////// -->
 	<preface><title>About this User Guide</title>
 			<para>
-This User Guide describes <productname>FreeTDS</productname> 0.61.  It is the product of (lots of) happy collaborative effort.  Although Brian's name and mine are at the top of it, behind it are many others, who contributed thoughtful suggestions, bamboozled questions, stellar prose, and terse instructions.  I don't mention this for the usual reasons (the enumeration of which I leave to you) but rather to emphasize that the purpose of our effort is to help you and those who come after you to have the easiest and most enjoyable time with <productname>FreeTDS</productname>.  
+This User Guide describes <productname>FreeTDS</productname> 0.62.  It is the product of (lots of) happy collaborative effort.  Although Brian's name and mine are at the top of it, behind it are many others, who contributed thoughtful suggestions, bamboozled questions, stellar prose, and terse instructions.  I don't mention this for the usual reasons (the enumeration of which I leave to you) but rather to emphasize that the purpose of our effort is to help you and those who come after you to have the easiest and most enjoyable time with <productname>FreeTDS</productname>.  
 			</para>
 			<para>
 It is surprisingly hard, after a while, to remember how it can be for someone newly approaching a project to use it.  What seems as obvious as a fog horn to an old hand may be much more like the fog itself to the newcomer.  That can make installing and setting up new software a puzzling or frustrating experience.  You may have heard, <quote>It's easy if you know how.</quote>  Indeed it is, and that's our purpose here: to make it easy, by letting you know how.  
@@ -48,9 +48,9 @@ This guide is here for you, and we hope that you will be here for it, that other
 The version you're reading is:
 			</para> 
   			<simplelist type='vert'>
-<member>$Revision: 1.59 $</>
-<member>$Date: 2003-06-30 04:59:59 $</>
-<member>CVS control number $Id: userguide.sgml,v 1.59 2003-06-30 04:59:59 jklowden Exp $.</>
+<member>$Revision: 1.60 $</>
+<member>$Date: 2003-07-27 11:27:02 $</>
+<member>CVS control number $Id: userguide.sgml,v 1.60 2003-07-27 11:27:02 freddy77 Exp $.</>
   			</simplelist>
 			</footnote>
 can be found on the <productname>FreeTDS</productname> 
